<resources>
    <string name="app_name">CobraToTrackIt</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="DoorsLock">Lock</string>
    <string name="DoorsUnLock">UnLock</string>
    <string name="alarm_off">Keypad Disarm</string>

    <string name="connect_to_vehicle">Connect to vehicle</string>
    <string name="enter_code">enter the SMS code</string>
    <string name="phone_number">Phone Number</string>
    <string name="license_plate">License Plate</string>
    <string name="email">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_top_text">Please enter your information below.Your email address and phone number will become part of your cobra profile.</string>
    <string name="tracking">Tracking</string>
    <string name="please_try_again">Please try again.</string>
    <string name="aboutUsText">When you need help on the road - every minute counts. We at the Kaftor center undertake a Quick response of up to 30 seconds by professional representatives who provide the link and guidance services - in addition to know how to operate all parties on the ground and update you in advance to you. We do not waste time on identifying - the kaftor will set us exactly who you are and where you are.</string>
    <string name="title_activity_get_status">GetStatusActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_info">Version 1.2</string>
    <string name="notifications">Notifications</string>
    <string name="trip_report">Trip Reports</string>
    <string name="address">Address</string>
    <string name="select_lang">Select an language</string>
    <string name="language">Language</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>
    <string name="general">General</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="engine_status">Engine Status</string>
    <string name="battery_status">Battery Status</string>
    <string name="show_route">Show Route</string>
    <string name="last_updated_on">Last updated on</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="please_enter_code">Please enter four digit code.</string>
    <string name="lights_off">Lights Off</string>
    <string name="lights_on">Lights</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="start_engine">Start Engine</string>
    <string name="stop_engine">Stop Engine</string>
    <string name="translating_to">Translating to</string>
    <string name="location">Location</string>
    <string name="lights">Lights</string>
    <string name="lock">Lock</string>
    <string name="engine">Engine</string>
    <string name="average_speed">Average Speed KPH</string>
    <string name="top_speed">Top Speed KPH</string>
    <string name="do_u_want_to_logout">Do you want to log out.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start">START</string>
    <string name="end">END</string>
    <string name="russian">Russian</string>
    <string name="please_select_language">Please select an language..</string>
    <string name="distance">distance</string>
    <string name="time">time</string>
    <string name="done">Done</string>
    <string name="title_activity_trip_report"></string>
    <string name="driving_time">"Driving Time: "</string>
    <string name="parking_time">"Parking Time: "</string>
    <string name="updating_info">Updating information</string>
    <string name="unit_not_connected">Unit is not connected to server or Error occurred on server</string>
    <string name="enter_sms_code">please enter the Verification Code sent to you by SMS</string>
    <string name="enter_keypad_code">please enter your keypad code</string>


</resources>
