<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context="com.ameba.cobra.activity.Register_Screen">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_text"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register_top_text"
                android:textColor="@color/white"/>


            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"

                 android:paddingTop="10dp">

                 <EditText
                     android:id="@+id/edFirstName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:background="@drawable/round_corner_grey"
                     android:hint="@string/first_name"
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@color/white"/>

                 <EditText
                     android:id="@+id/edLastName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginTop="2dp"
                     android:layout_weight="1"
                     android:background="@drawable/round_corner_grey"
                     android:hint="@string/last_name"
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@color/white"/>


             </LinearLayout>-->

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/round_corner_grey"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:visibility="gone"/>


            <EditText
                android:id="@+id/edLicencePlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner_grey"
                android:hint="@string/license_plate"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner_grey"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"/>


            <EditText
                android:id="@+id/edUnitIMEI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner_grey"
                android:hint="@string/enter_code"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:visibility="gone"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_selector"
                android:padding="10dp"
                android:text="@string/connect_to_vehicle"
                android:textColor="@color/white"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>