<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_margin="10dp"
              android:background="@drawable/abc_popup_background_mtrl_mult"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="all"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:padding="10dp"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btnHebrew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:padding="10dp"
            android:text="@string/hebrew"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnRussian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:padding="10dp"
            android:text="@string/russian"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>