<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/layoutvehicleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnLock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/left_round_white_stroke_selector"
                android:drawableLeft="@mipmap/lock_icon"
                android:paddingLeft="10dp"
                android:text="@string/DoorsLock"
                android:textColor="@color/white"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/background"/>


            <Button
                android:id="@+id/btnUnLock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/right_round_white_stroke_selector"
                android:drawableLeft="@mipmap/ic_unlock"
                android:paddingLeft="10dp"
                android:text="@string/DoorsUnLock"
                android:textColor="@color/white"/>

        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/btnDisArm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/white_stroke"
        android:gravity="center"
        android:text="@string/alarm_off"
        android:textColor="@color/white"/>


</LinearLayout>
