<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context="car.gagan.cobratotrackit.Classes.Fragments.Settings">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey"
        android:elevation="2dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <TextView
            style="@style/MyMaterialTheme.titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="@string/settings"/>


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@null"
                android:text="@string/notifications"
                android:textColor="@color/red"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:text="@string/notifications"
                    android:textColor="@color/white"/>


                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:theme="@style/Color1SwitchStyle"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@null"
                android:text="@string/contact"
                android:textColor="@color/red"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:text="@string/contact"
                    android:textColor="@color/white"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_nextarrow"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@null"
                android:text="@string/language"
                android:textColor="@color/red"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>

            <LinearLayout
                android:id="@+id/layoutSelectLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:text="@string/select_lang"
                    android:textColor="@color/white"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_nextarrow"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@null"
                android:text="@string/general"
                android:textColor="@color/red"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_nextarrow"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/lt_grey"></View>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:text="@string/about"
                    android:textColor="@color/white"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_nextarrow"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@null"
                android:text="@string/logout"
                android:textColor="@color/red"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>

            <LinearLayout
                android:id="@+id/layoutLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="left"
                    android:text="@string/logout"
                    android:textColor="@color/white"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_nextarrow"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lt_grey"></View>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textSize="47sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/lt_grey"
                android:text="@string/version_info"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
