<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutDialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:background="@color/grey"
    android:elevation="4dp"
    android:orientation="horizontal"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="20dp"

    >

    <LinearLayout
        android:id="@+id/btnLightslayout"
        style="@style/MyMaterialTheme.Scaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnLights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:clickable="true"
            android:src="@mipmap/light_icon"
            app:backgroundTint="@color/lights"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lights"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btnLockLayout"
        style="@style/MyMaterialTheme.Scaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.design.widget.FloatingActionButton

            android:id="@+id/btnLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"

            android:clickable="true"
            android:src="@mipmap/lock_icon"
            app:backgroundTint="@color/lock"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout
        style="@style/MyMaterialTheme.Scaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton

            android:id="@+id/btnAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:clickable="true"
            android:src="@mipmap/ic_engine_on"
            app:backgroundTint="@color/alarm"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        style="@style/MyMaterialTheme.Scaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLockLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btntracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@mipmap/tracking_icon"
            app:backgroundTint="@color/tracking"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracking"
            android:textColor="@color/white"/>
    </LinearLayout>


</RelativeLayout>
